# mcp-serial-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
sample/: README.md  log_chat.txt  log_zork1.txt  prompt_zork1.md
src/: server.py
